multiple js bundle problem

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <div class="child">child</div>
 </div>
 
-<script type="text/javascript" src="js/main.min.js"></script>
+<script type="text/javascript" src="js/main.js"></script>
 
 </body>
 
